Fix role headings and spacing

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -20,6 +20,11 @@
     h3 {
         margin-top: 5px !important;
         margin-bottom: 0 !important;
+        line-height: 1.1 !important;
+
+        a {
+            line-height: 1.1 !important;
+        }
     }
 }
 
